apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: whoami.home.prowe.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: whoami.home.prowe.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - whoami.home.prowe.ca
      secretName: whoami-tls
